--- a/hotspoter/hostapd.conf
+++ b/hotspoter/hostapd.conf
@@ -1,13 +1,10 @@
 interface=wlan0
-driver=nl80211
-ssid=ConfigHotspot
+ssid=anectDotFunHotspot
 hw_mode=g
 channel=7
-wmm_enabled=0
-macaddr_acl=0
+wmm_enabled=1
 auth_algs=1
-ignore_broadcast_ssid=0
 wpa=2
-wpa_passphrase=YourSecurePass
+wpa_passphrase=anectdot
 wpa_key_mgmt=WPA-PSK
 rsn_pairwise=CCMP
