--- a/mobile-app/anecdotfun/pubspec.yaml
+++ b/mobile-app/anecdotfun/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  web_socket_channel: ^2.1.0
 
 dev_dependencies:
   flutter_test:
