--- a/server_2/anectdot-server/.gitignore
+++ b/server_2/anectdot-server/.gitignore
@@ -4,5 +4,9 @@
 .bsp
 .bloop
 target/
-project/
+project/target/
+project/project/
+project/metals.sbt
+project/build.properties
+project/CompilerPlugins.scala
 .DS_Store
