Use application.conf to store boxId & serial port, switch WS response to json format

--- a/boite/main/src/main/resources/application.conf
+++ b/boite/main/src/main/resources/application.conf
@@ -1,12 +1,22 @@
-akka.http {
-  client {
-    websocket {
-      periodic-keep-alive-mode = ping
-
-      # Interval for sending periodic keep-alives
-      # The frame sent will be the one configured in akka.http.server.websocket.periodic-keep-alive-mode
-      # `infinite` by default, or a duration that is the max idle interval after which an keep-alive frame should be sent
-      periodic-keep-alive-max-idle = 10s
+akka {
+    game {
+        box {
+            id = 1
+        }
+        arduino {
+            com-port = COM5
+        }
     }
-  }
+    http {
+        client {
+            websocket {
+                periodic-keep-alive-mode = ping
+                
+                # Interval for sending periodic keep-alives
+                # The frame sent will be the one configured in akka.http.server.websocket.periodic-keep-alive-mode
+                # `infinite` by default, or a duration that is the max idle interval after which an keep-alive frame should be sent
+                periodic-keep-alive-max-idle = 10s
+            }
+        }
+    }
 }
