--- a/mobile-app/anecdotfun/pubspec.yaml
+++ b/mobile-app/anecdotfun/pubspec.yaml
@@ -14,13 +14,14 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  web_socket_channel: ^2.1.0
+  web_socket_channel: ^3.0.1
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
@@ -30,4 +31,5 @@ flutter:
 
   assets:
     # Add assets from the images directory to the application.
+    - assets/animations/
     - assets/images/
