make websocket server base url configurable

--- a/box/main/src/main/resources/application.conf
+++ b/box/main/src/main/resources/application.conf
@@ -6,6 +6,9 @@ akka {
         arduino {
             com-port = COM5
         }
+        server {
+            base-url = ws://localhost:8080/ws/
+        }
     }
     http {
         client {
