fix typo anectdot to anecdot

--- a/hotspot/hostapd.conf
+++ b/hotspot/hostapd.conf
@@ -1,10 +1,10 @@
 interface=wlan0
-ssid=anectDotFunHotspot
+ssid=anecDotFunHotspot
 hw_mode=g
 channel=7
 wmm_enabled=1
 auth_algs=1
 wpa=2
-wpa_passphrase=anectdot
+wpa_passphrase=anecdot
 wpa_key_mgmt=WPA-PSK
 rsn_pairwise=CCMP
