--- a/box/main/src/main/resources/application.conf
+++ b/box/main/src/main/resources/application.conf
@@ -7,7 +7,7 @@ akka {
             com-port = COM5
         }
         server {
-            base-url = ws://localhost:8080/ws/
+            base-url = "ws://localhost:8080/ws/"
         }
     }
     http {
