--- a/mobile-app/pubspec.yaml
+++ b/mobile-app/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
   web_socket_channel: ^3.0.1
   lottie: ^3.1.0
+  nfc_manager: ^3.5.0
 
 dev_dependencies:
   flutter_test:
