--- a/mobile-app/pubspec.yaml
+++ b/mobile-app/pubspec.yaml
@@ -12,6 +12,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
   flutter_localizations:
     sdk: flutter
   web_socket_channel: ^3.0.1
