--- a/mobile-app/pubspec.yaml
+++ b/mobile-app/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   web_socket_channel: ^3.0.1
   lottie: ^3.1.0
   nfc_manager: ^3.5.0
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
