--- a/hotspot/hostapd.conf
+++ b/hotspot/hostapd.conf
@@ -5,6 +5,6 @@ channel=7
 wmm_enabled=1
 auth_algs=1
 wpa=2
-wpa_passphrase=anecdot
+wpa_passphrase=anecdote
 wpa_key_mgmt=WPA-PSK
 rsn_pairwise=CCMP
