--- a/mobile-app/pubspec.yaml
+++ b/mobile-app/pubspec.yaml
@@ -20,7 +20,8 @@ dependencies:
   lottie: ^3.1.0
   nfc_manager: ^3.5.0
   shared_preferences: ^2.3.3
-
+  flutter_svg: ^2.0.16
+  flutter_launcher_icons: ^0.14.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -37,3 +38,22 @@ flutter:
     # Add assets from the images directory to the application.
     - assets/animations/
     - assets/images/
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo_square.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/images/logo_square.png"
+  web:
+    generate: true
+    image_path:  "assets/images/logo_square.png"
+    background_color: "#ffffff"
+    theme_color: "#ffffff"
+  windows:
+    generate: true
+    image_path:  "assets/images/logo_square.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path:  "assets/images/logo_square.png"
