Invalidate uniqueId local stored after 10 minutes

--- a/box/main/src/main/resources/application.conf
+++ b/box/main/src/main/resources/application.conf
@@ -2,6 +2,7 @@ akka {
     game {
         box {
             id = 1
+            unique-id-valid-duration = 10 # in minutes
         }
         arduino {
             com-port = COM5
