--- a/mobile-app/pubspec.yaml
+++ b/mobile-app/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   shared_preferences: ^2.3.3
   flutter_svg: ^2.0.16
   flutter_launcher_icons: ^0.14.2
+  wakelock_plus: ^1.2.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
