fix flutter warnings

--- a/mobile-app/pubspec.yaml
+++ b/mobile-app/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   flutter_svg: ^2.0.16
   flutter_launcher_icons: ^0.14.2
   wakelock_plus: ^1.2.8
+  collection: ^1.18.0
+  logger: ^2.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
